@@ -65,7 +65,7 @@ else:
     filename = None
 
 # Load the Mnemosyne library.
-mnemosyne = Mnemosyne(upload_science_logs=True, interested_in_old_reps=True)
+mnemosyne = Mnemosyne(upload_science_logs=None, interested_in_old_reps=True)
 
 # Run as server.
 if options.web_server == True or options.sync_server == True:
